// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`failList 1`] = `
Object {
  "@@redux-saga/IO": true,
  "combinator": false,
  "payload": Object {
    "action": Object {
      "error": [ReferenceError: getListFailure is not defined],
      "type": "GET_LIST_FAILURE",
    },
    "channel": undefined,
  },
  "type": "PUT",
}
`;

exports[`getList 1`] = `
Object {
  "@@redux-saga/IO": true,
  "combinator": false,
  "payload": Object {
    "action": Object {
      "response": Array [],
      "type": "GET_LIST_SUCCESS",
    },
    "channel": undefined,
  },
  "type": "PUT",
}
`;
